[package]
name = "websocket"
version = "0.1.0"
authors = ["Shuntaro Nishizawa <me@shun.technology>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hex = "0.4.2"
httparse = "1.3.4"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"
