[package]
name = "websocket"
version = "0.1.0"
authors = ["Shuntaro Nishizawa <me@shun.technology>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
hex = "0.4"
httparse = "1.3"
sha1 = { version = "0.6", features = ["std"] }
